--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/receiver-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/receiver-dep.yaml
@@ -25,7 +25,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.services.receiver.serviceName }} 
-        image: {{ .Values.services.receiver.dockerImage }}:{{ .Values.services.receiver.dockerTag }} 
+        image: {{ .Values.services.receiver.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
         - name: active_profile_env
