--- a/deployment/sandbox-v2/helm/charts/ida/templates/kyc-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/kyc-dep.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.services.kyc.serviceName }} 
-        image: {{ .Values.services.kyc.dockerImage }}:{{ .Values.services.kyc.dockerTag }} 
+        image: {{ .Values.services.kyc.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
         - name: active_profile_env
