--- a/deployment/sandbox-v2/helm/charts/regproc/templates/printsvc-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/printsvc-dep.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.services.printsvc.serviceName }} 
-        image: {{ .Values.services.printsvc.dockerImage }}:{{ .Values.services.printsvc.dockerTag }} 
+        image: {{ .Values.services.printsvc.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
         - name: active_profile_env
