--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/pktserver-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/pktserver-dep.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.services.pktserver.serviceName }} 
-        image: {{ .Values.services.pktserver.dockerImage }}:{{ .Values.services.pktserver.dockerTag }} 
+        image: {{ .Values.services.pktserver.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         ports: 
         - containerPort: {{ .Values.services.pktserver.ports.containerPort }}
