--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/status-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/status-dep.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.services.status.serviceName }} 
-        image: {{ .Values.services.status.dockerImage }}:{{ .Values.services.status.dockerTag }} 
+        image: {{ .Values.services.status.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
         - name: active_profile_env
