--- a/deployment/sandbox-v2/helm/charts/ida/templates/hashsalt-job.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/hashsalt-job.yaml
@@ -17,7 +17,7 @@ spec:
       restartPolicy: Never  # This is one time job
       containers:
       - name: {{ .Values.generators.hashsalt.name }} 
-        image: {{ .Values.generators.hashsalt.dockerImage }}:{{ .Values.generators.hashsalt.dockerTag }} 
+        image: {{ .Values.generators.hashsalt.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
         - name: active_profile_env
