--- a/deployment/sandbox-v2/helm/charts/regproc/templates/abishandler-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/abishandler-dep.yaml
@@ -25,7 +25,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.services.abishandler.serviceName }} 
-        image: {{ .Values.services.abishandler.dockerImage }}:{{ .Values.services.abishandler.dockerTag }} 
+        image: {{ .Values.services.abishandler.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
         - name: active_profile_env
