--- a/deployment/sandbox-v2/helm/charts/regproc/templates/notification-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/notification-dep.yaml
@@ -25,7 +25,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.services.notification.serviceName }} 
-        image: {{ .Values.services.notification.dockerImage }}:{{ .Values.services.notification.dockerTag }} 
+        image: {{ .Values.services.notification.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
         - name: active_profile_env
