--- a/deployment/sandbox-v2/helm/charts/regproc/templates/osi-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/osi-dep.yaml
@@ -25,7 +25,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.services.osi.serviceName }} 
-        image: {{ .Values.services.osi.dockerImage }}:{{ .Values.services.osi.dockerTag }} 
+        image: {{ .Values.services.osi.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
         - name: active_profile_env
