--- a/deployment/sandbox-v2/helm/charts/regproc/templates/print-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/print-dep.yaml
@@ -25,7 +25,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.services.print.serviceName }} 
-        image: {{ .Values.services.print.dockerImage }}:{{ .Values.services.print.dockerTag }} 
+        image: {{ .Values.services.print.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
         - name: active_profile_env
