--- a/deployment/sandbox-v2/helm/charts/idrepo/templates/vid-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/idrepo/templates/vid-dep.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.services.vid.serviceName }} 
-        image: {{ .Values.services.vid.dockerImage }}:{{ .Values.services.vid.dockerTag }} 
+        image: {{ .Values.services.vid.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
         - name: active_profile_env
