--- a/deployment/sandbox-v2/helm/charts/pms/templates/policy-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/pms/templates/policy-dep.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.services.policy.serviceName }} 
-        image: {{ .Values.services.policy.dockerImage }}:{{ .Values.services.policy.dockerTag }} 
+        image: {{ .Values.services.policy.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
         - name: active_profile_env
