--- a/deployment/sandbox-v2/helm/charts/resident/templates/resident-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/resident/templates/resident-dep.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.services.resident.serviceName }} 
-        image: {{ .Values.services.resident.dockerImage }}:{{ .Values.services.resident.dockerTag }} 
+        image: {{ .Values.services.resident.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }} 
         env:
         - name: active_profile_env
