--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -120,3 +120,32 @@ versions:
         'ida-hash-salt-generator': 'mosipdev/kernel-salt-generator:1.0.9'
       encryptsalt:  
          'ida-encrypt-salt-generator': 'mosipdev/kernel-salt-generator:1.0.9'
+
+    idrepo:
+      identity:
+        'idrepo-identity-service': 'mosipdev/id-repository-identity-service:1.0.9'
+      vid: 
+        'idrepo-vid-service': 'mosipdev/id-repository-vid-service:1.0.9'
+      uinhash:  
+        'idrepo-uin-hash-generator': 'mosipdev/kernel-salt-generator:1.0.9'
+      uinencrypt:
+        'idrepo-uin-encrypt-generator' :  'mosipdev/kernel-salt-generator:1.0.9'
+      vidhash:
+        'idrepo-vid-hash-generator': 'mosipdev/kernel-salt-generator:1.0.9'
+      videncrypt:
+        'idrepo-vid-encrypt-generator': 'mosipdev/kernel-salt-generator:1.0.9'
+
+    pms:
+      misp: 
+        'pms-misp-service': 'mosipdev/pmp-misp-service:1.0.0'
+      pm:
+        'pms-partner-management-service': 'mosipdev/pmp-partner-management-service:1.0.0'
+      partner:
+        'pms-partner-service': 'mosipdev/pmp-partner-service:1.0.0'
+      policy:
+        'pms-policy-management-service': 'mosipdev/pmp-policy-management-service:1.0.0'
+
+
+    resident: 
+      resident:  
+        'resident-service': 'mosipdev/resident-service:1.0.10'
