Clamav hostname udpated in applications-mz.properties.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/application-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/application-mz.properties
@@ -291,13 +291,9 @@ mosip.kernel.licensekey.permissions=OTP Trigger,OTP Authentication,Demo Authenti
 
 
 #-----------------------------Virus Scanner--------------------------------------
-#Virus Scanner server url
-# Here we have specified any node of MZ cluster where clamav is running
-mosip.kernel.virus-scanner.host={{ clusters.mz.any_node_ip }}
-#Virus Scanner server port: 
+# Here we specify the Kubernetes service name, as clamav runs in the same cluster
+mosip.kernel.virus-scanner.host=clamav 
 mosip.kernel.virus-scanner.port=30310
-
-
 
 #-------------------------------FS Adapter- HDFS -------------------------------
 mosip.kernel.fsadapter.hdfs.name-node-url=hdfs://hadoop-hdfs-nn:9000
