[MOSIP-8035] Changed pktserver service to accept all hosts.

--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/pktserver-ingress.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/pktserver-ingress.yaml
@@ -12,16 +12,7 @@ metadata:
       
 spec:
   rules:
-  - host: {{ .Values.domainName }}
-    http:
-      paths:
-      - path: /registrationprocessor/v1/dmzpacketserver(/|$)(.*)
-        backend:
-          serviceName: {{ .Values.services.pktserver.serviceName }}
-          servicePort: {{ .Values.services.pktserver.ports.servicePort }}
-
-  - host: {{ .Values.internalDomain }}
-    http:
+  - http:
       paths:
       - path: /registrationprocessor/v1/dmzpacketserver(/|$)(.*)
         backend:
