--- a/deployment/sandbox-v2/helm/charts/ida/templates/otp-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/otp-dep.yaml
@@ -24,6 +24,10 @@ spec:
         app: {{ .Values.services.otp.serviceName }} 
         component: {{ .Values.component }} 
     spec:
+      initContainers:  # TODO: Temporarily added as a workaround. Duplicate key issue. 
+      - name: wait-for-auth
+        image: ellerbrock/alpine-bash-curl-ssl
+        command: ['sh', '-c', "while !(curl --connect-timeout 3 -X GET  http://ida-auth-service/idauthentication/v1/auth/actuator/health | grep status);do sleep 3;done"]
       containers:
       - name: {{ .Values.services.otp.serviceName }} 
         image: {{ .Values.services.otp.dockerImage }}
