--- a/deployment/sandbox-v2/hosts.ini
+++ b/deployment/sandbox-v2/hosts.ini
@@ -1,14 +1,14 @@
 # Inventory file with for setup with more machines in 
 # clusters
 [console]
-console ansible_user=mosipuser
+console.sb ansible_user=mosipuser
 
 # On public facing machine
 [nginxserver]
-console ansible_user=mosipuser  
+console.sb ansible_user=mosipuser  
 
 [nfsserver]
-console ansible_user=mosipuser  
+console.sb ansible_user=mosipuser  
 
 # Military zone (secure zone) cluster
 [mzcluster:children]
@@ -16,25 +16,25 @@ mzmaster
 mzworkers
 
 [mzmaster]
-mzmaster ansible_user=root
+mzmaster.sb ansible_user=root
 
 [mzworkers]
-mzworker0 ansible_user=root
-mzworker1 ansible_user=root
-mzworker2 ansible_user=root
-mzworker3 ansible_user=root
-mzworker4 ansible_user=root
-mzworker5 ansible_user=root
-mzworker6 ansible_user=root
-mzworker7 ansible_user=root
-mzworker8 ansible_user=root
+mzworker0.sb ansible_user=root
+mzworker1.sb ansible_user=root
+mzworker2.sb ansible_user=root
+mzworker3.sb ansible_user=root
+mzworker4.sb ansible_user=root
+mzworker5.sb ansible_user=root
+mzworker6.sb ansible_user=root
+mzworker7.sb ansible_user=root
+mzworker8.sb ansible_user=root
 
 # De-Military zone (dmz) cluster
 [dmzcluster:children]
 dmzmaster
 dmzworkers
 [dmzmaster]
-dmzmaster ansible_user=root
+dmzmaster.sb ansible_user=root
 [dmzworkers]
-dmzworker0 ansible_user=root
+dmzworker0.sb ansible_user=root
 
