--- a/deployment/sandbox-v2/playbooks/dmzcluster.yml
+++ b/deployment/sandbox-v2/playbooks/dmzcluster.yml
@@ -2,7 +2,7 @@
 - import_playbook: cluster.yml
   vars:
     cluster: dmzcluster
-    master: dmzmaster
+    master: dmzmaster.sb
     workers: dmzworkers
 
 # Ingress nginx controller
