--- a/deployment/sandbox-v2/group_vars/dmzcluster.yml
+++ b/deployment/sandbox-v2/group_vars/dmzcluster.yml
@@ -2,7 +2,7 @@
 # ansible_user: root
 
 cluster_name: 'dmzcluster'  # Same as in hosts.ini
-cluster_master: 'dmzmaster' # Same as in hosts.ini
+cluster_master: 'dmzmaster.sb' # Same as in hosts.ini
 
 # Kubernetes
 kube_version: v1.18.0
