[MOSIP-7139] Properties directly modified in the properties files instead of group_vars/all.yml.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
@@ -24,20 +24,20 @@ mosip.kernel.sms.country.code=91
 mosip.kernel.sms.number.length=10
 
 #mosip.kernel.sms.gateway : "infobip" or "msg91"
-mosip.kernel.sms.gateway={{site.sms.gateway}}
+mosip.kernel.sms.gateway=gateway
 
 #--msg91 gateway--
-mosip.kernel.sms.api={{site.sms.api}}
-mosip.kernel.sms.authkey={{site.sms.authkey}}
-mosip.kernel.sms.route={{site.sms.route}}
-mosip.kernel.sms.sender={{site.sms.sender}}
-mosip.kernel.sms.unicode={{site.sms.unicode}}
+mosip.kernel.sms.api=smsapi
+mosip.kernel.sms.authkey=authkey
+mosip.kernel.sms.route=route
+mosip.kernel.sms.sender=sender
+mosip.kernel.sms.unicode=unicode
 
 # -- Email notification -------
-mosip.kernel.notification.email.from={{ site.smtp.email_from }}
-spring.mail.host={{ site.smtp.host }}
-spring.mail.username={{ site.smtp.username }}
-spring.mail.password={{ site.smtp.password }}
+mosip.kernel.notification.email.from=emailfrom
+spring.mail.host=smtphost
+spring.mail.username=username
+spring.mail.password=password
 spring.mail.port=587
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.required=true
