--- a/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-mz.properties
@@ -339,9 +339,9 @@ mosip.pre-registration.qrcode.id.generate=mosip.pre-registration.qrcode.generate
 mosip.preregistration.document.id.upload=mosip.pre-registration.document.upload
 
 #-------------------captcha---------------
-google.recaptcha.site.key={{ site.captcha.google_recaptcha_site_key }}  
+google.recaptcha.site.key=sitekey
 google.recaptcha.verify.url=https://www.google.com/recaptcha/api/siteverify
-google.recaptcha.secret.key={{ site.captcha.google_recaptcha_secret_key }}
+google.recaptcha.secret.key=secret
 mosip.preregistration.captcha.id.validate = mosip.pre-registration.captcha.id.validate
 
 #Id-scheme-json-file
