--- a/deployment/sandbox-v2/playbooks/mzcluster.yml
+++ b/deployment/sandbox-v2/playbooks/mzcluster.yml
@@ -5,6 +5,20 @@
     master: mzmaster.sb
     workers: mzworkers
 
+# Apply any taints
+- hosts: console
+  kube_config: '{{clusters.mz.kube_config}}' 
+  tasks:
+    # Enable taint 
+    - name: Postgre taint    
+      shell: 'kubectl --kubeconfig {{kube_config}} taint nodes {{postgres.node_affinity.node}} {{ postgres.node_affinity.taint.key}}={{postgres.node_affinity.taint.value}}:NoSchedule'         
+      when: postgres.node_affinity.enabled == true
+    
+    # Or disable taint
+    - name: Postgre taint    
+      shell: 'kubectl --kubeconfig {{kube_config}} taint nodes {{postgres.node_affinity.node}} {{ postgres.node_affinity.taint.key}}:NoSchedule-'         
+      when: postgres.node_affinity.enabled != true
+
 # Ingress nginx controller
 - hosts: console
   vars:
