--- a/deployment/sandbox-v2/playbooks/mzcluster.yml
+++ b/deployment/sandbox-v2/playbooks/mzcluster.yml
@@ -16,9 +16,9 @@
       when: postgres.node_affinity.enabled == true
     
     # Or disable taint
-    - name: Postgre taint    
-      shell: 'kubectl --kubeconfig {{kube_config}} taint nodes {{postgres.node_affinity.node}} {{ postgres.node_affinity.taint.key}}:NoSchedule-'         
-      when: postgres.node_affinity.enabled != true
+#    - name: Postgre taint    
+#      shell: 'kubectl --kubeconfig {{kube_config}} taint nodes {{postgres.node_affinity.node}} {{ postgres.node_affinity.taint.key}}:NoSchedule-'         
+#      when: postgres.node_affinity.enabled != true
 
 # Ingress nginx controller
 - hosts: console
