--- a/deployment/sandbox-v2/helm/charts/hadoop/templates/hdfs-nn-statefulset.yaml
+++ b/deployment/sandbox-v2/helm/charts/hadoop/templates/hdfs-nn-statefulset.yaml
@@ -24,7 +24,24 @@ spec:
         release: {{ .Release.Name }}
         component: hdfs-nn
     spec:
+      {{ if eq .Values.nodeAffinity.enabled true }}
+      tolerations:
+      - key: {{ .Values.nodeAffinity.taint.key }}
+        operator: "Equal"
+        value: {{ .Values.nodeAffinity.taint.value }}
+        effect: "NoSchedule"
+      {{ end }}
       affinity:
+        {{ if eq .Values.nodeAffinity.enabled true }}
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: kubernetes.io/hostname
+                operator: In
+                values:
+                -  {{ .Values.nodeAffinity.node }}
+        {{ end }}
         podAntiAffinity:
         {{- if eq .Values.antiAffinity "hard" }}
           requiredDuringSchedulingIgnoredDuringExecution:
