--- a/deployment/sandbox-v2/playbooks/mzcluster.yml
+++ b/deployment/sandbox-v2/playbooks/mzcluster.yml
@@ -6,19 +6,7 @@
     workers: mzworkers
 
 # Apply any taints
-- hosts: console
-  vars:
-    kube_config: '{{clusters.mz.kube_config}}' 
-  tasks:
-    # Enable taint 
-    - name: Postgre taint    
-      shell: 'kubectl --kubeconfig {{kube_config}} taint nodes {{postgres.node_affinity.node}} {{ postgres.node_affinity.taint.key}}={{postgres.node_affinity.taint.value}}:NoSchedule'         
-      when: postgres.node_affinity.enabled == true
-    
-    # Or disable taint
-#    - name: Postgre taint    
-#      shell: 'kubectl --kubeconfig {{kube_config}} taint nodes {{postgres.node_affinity.node}} {{ postgres.node_affinity.taint.key}}:NoSchedule-'         
-#      when: postgres.node_affinity.enabled != true
+- import_playbook: taints.yml
 
 # Ingress nginx controller
 - hosts: console
