[MOSIP-1806] Clamav moved to Helm. Separate instance of clamav created in DMZ. Accordingly, properties modified.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/application-dmz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/application-dmz.properties
@@ -282,10 +282,8 @@ mosip.kernel.licensekey.permissions=OTP Trigger,OTP Authentication,Demo Authenti
 
 
 #-----------------------------Virus Scanner--------------------------------------
-#Virus Scanner server url
-mosip.kernel.virus-scanner.host={{ clusters.mz.any_node_ip }}
-#Virus Scanner server port
-mosip.kernel.virus-scanner.port=30310
+mosip.kernel.virus-scanner.host=clamav 
+mosip.kernel.virus-scanner.port=80
 
 #------------------------Transliteration-----------------------------------------------
 mosip.kernel.transliteration.arabic-language-code=ara
