--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-dmz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-dmz.properties
@@ -252,9 +252,9 @@ registration.processor.id.repo.vidVersion=v1
 #Virus scanner packet extension
 registration.processor.packet.ext=.zip
 #Virus scanner server host
-mosip.kernel.virus-scanner.host={{ clusters.mz.any_node_ip }}
+mosip.kernel.virus-scanner.host=clamav 
 #Virus scanner port
-mosip.kernel.virus-scanner.port=30310
+mosip.kernel.virus-scanner.port=80
 #Virus scanner application request id
 registration.processor.application.id=REGISTRATION
 registration.processor.rid.machineidsubstring=10
