--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -10,7 +10,8 @@
 - import_playbook: playbooks/dmzmonitoring.yml
 - import_playbook: playbooks/postgres.yml
 - import_playbook: playbooks/keycloak.yml
-- import_playbook: playbooks/clamav.yaml
+- import_playbook: playbooks/mzclamav.yaml  # Each zone has it's own clamav
+- import_playbook: playbooks/dmzclamav.yaml
 - import_playbook: playbooks/activemq.yaml
 - import_playbook: playbooks/hdfs.yml
 - import_playbook: playbooks/config-server.yml    
@@ -19,6 +20,5 @@
 - import_playbook: playbooks/regproc.yml
 - import_playbook: playbooks/ida.yml
 - import_playbook: playbooks/idrepo.yml
-#- import_playbook: playbooks/admin.yml  # Temporarily disabled. TODO
 - import_playbook: playbooks/pms.yml
 - import_playbook: playbooks/resident.yml
