updated with timezone parameter

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-mz.properties
@@ -348,3 +348,5 @@ mosip.preregistration.captcha.id.validate = mosip.pre-registration.captcha.id.va
 preregistration.demographic.idschema-json-filename=pre-registration-demographic.json
 
 mosip.preregistration.id-schema=http://kernel-syncdata-service/v1/syncdata/latestidschema
+
+timeZone=Asia/Calcutta
