[MOSIP-8265] Versions page made available via nginx landing page.

--- a/deployment/sandbox-v2/playbooks/console.yml
+++ b/deployment/sandbox-v2/playbooks/console.yml
@@ -21,3 +21,15 @@
      - {role: packages/helm-cli, tags: [helm-cli]}
      - {role: packages/policycoreutils-python, tags: [policy]}
 
+  tasks: 
+    - name: Set read permission to home directory needed for nginx 
+      file:
+        path: '{{lookup("env", "HOME")}}'
+        mode: '755'
+      become: yes
+  
+    - name: Change selinux to permissive mode.
+      selinux:
+        policy: targeted
+        state: permissive
+      become: yes
