--- a/deployment/sandbox-v2/roles/nginx/tasks/update_conf.yml
+++ b/deployment/sandbox-v2/roles/nginx/tasks/update_conf.yml
@@ -22,6 +22,13 @@
     dest: '/usr/share/nginx/html/index.html'
   become: yes
 
+- name: Set symlink to mosip versions file
+  file: 
+    src: '{{install_root}}/versions.yml'
+    dest: '/usr/share/nginx/html/versions.txt'
+    state: link
+  become: yes
+
 - name: Restart nginx
   command: 'systemctl restart nginx'
   become: yes
