adding security parameters

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/resident-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/resident-mz.properties
@@ -69,3 +69,11 @@ resident.datetime.pattern=yyyy-MM-dd'T'HH:mm:ss.SSS'Z'
 auth.types.allowed=demo,bio-Finger,bio-Iris,bio-FACE
 
 resident.identityjson=registration-processor-identity.json
+
+-------Security properties-----------------
+#CSRF switch
+mosip.security.csrf-enable:false
+
+#secure cookie switch
+mosip.security.secure-cookie:false
+
