updated security parameters

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/partner-management-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/partner-management-mz.properties
@@ -58,3 +58,12 @@ auth.server.validate.url=http://kernel-auth-service/v1/authmanager/authorize/adm
 auth.server.admin.validate.url=http://kernel-auth-service/v1/authmanager/authorize/admin/validateToken
 auth.jwt.secret=authjwtsecret
 auth.jwt.base=Mosip-Token
+
+##############Security properties ########################
+
+#CSRF switch
+mosip.security.csrf-enable:false
+
+#secure cookie switch
+mosip.security.secure-cookie:false
+
