updated security parameters

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/admin-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/admin-mz.properties
@@ -169,3 +169,16 @@ mosip.admin-services.open-id.login_flow.response_type=code
 mosip.admin-services.open-id.authorization_endpoint=${mosip.open-id.base-url}/auth/realms/{realmId}/protocol/openid-connect/auth
 mosip.admin-services.open-id.token_endpoint=${mosip.open-id.base-url}/auth/realms/{realmId}/protocol/openid-connect/token
 mosip.admin-services.cookie.security=true
+
+#---------------------------------------Security Properties-----------------------------
+#CSRF switch
+mosip.security.csrf-enable=false
+
+#CORS switch
+mosip.security.cors-enable=false
+
+#comma separated allowed origins
+mosip.security.origins=localhost:8080
+
+#secure cookie switch
+mosip.security.secure-cookie=false
