updated security parameters

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
@@ -346,3 +346,16 @@ kernel.uin.transfer-scheduler-days_of_week=*
 # Proxy otp
 mosip.kernel.auth.proxy-otp-value=111111
 mosip.security.provider.name=SunPKCS11-pkcs11-proxy
+
+#---------------------------------------Security Properties-----------------------------
+#CSRF switch
+mosip.security.csrf-enable=false
+
+#CORS switch
+mosip.security.cors-enable=false
+
+#comma separated allowed origins
+mosip.security.origins=localhost:8080
+
+#secure cookie switch
+mosip.security.secure-cookie=false
