updated security parameters

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-mz.properties
@@ -350,3 +350,17 @@ preregistration.demographic.idschema-json-filename=pre-registration-demographic.
 mosip.preregistration.id-schema=http://kernel-syncdata-service/v1/syncdata/latestidschema
 
 timeZone=Asia/Calcutta
+
+#security properties
+
+#CSRF switch
+mosip.security.csrf-enable:false
+
+#CORS switch
+mosip.security.cors-enable:false
+
+#comma separated allowed origins
+mosip.security.origins:localhost:8080,localhost:4200
+
+#secure cookie switch
+mosip.security.secure-cookie:false
