--- a/deployment/sandbox-v2/helm/charts/admin/templates/admin-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/admin/templates/admin-dep.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.services.admin.serviceName }} 
-        image: {{ .Values.services.admin.dockerImage }}:{{ .Values.services.admin.dockerTag }} 
+        image: {{ .Values.services.admin.dockerImage }} 
         imagePullPolicy: {{ .Values.imagePullPolicy }} 
         env:
         - name: active_profile_env
