--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -8,6 +8,7 @@
 - import_playbook: playbooks/dmzcluster.yml
 - import_playbook: playbooks/mzmonitoring.yml
 - import_playbook: playbooks/dmzmonitoring.yml
+- import_playbook: playbooks/elk.yml 
 - import_playbook: playbooks/postgres.yml
 - import_playbook: playbooks/keycloak.yml
 - import_playbook: playbooks/mzclamav.yml  # Each zone has it's own clamav
