--- a/deployment/sandbox-v2/playbooks/dmzmonitoring.yml
+++ b/deployment/sandbox-v2/playbooks/dmzmonitoring.yml
@@ -9,3 +9,11 @@
   vars:
     kube_config: '{{clusters.dmz.kube_config}}'
     mon_prop: '{{clusters.dmz.monitoring}}' 
+
+# ELK - Filebeat
+# Only Filebeat component installed on DMZ. It pushes logs to 
+# Elasticsearch on MZ.
+- import_playbook: filebeat.yml
+  vars:
+    mon_prop: '{{clusters.dmz.monitoring}}' 
+    kube_config: '{{clusters.dmz.kube_config}}'
