--- a/deployment/sandbox-v2/roles/k8scluster/kubernetes/node/handlers/main.yml
+++ b/deployment/sandbox-v2/roles/k8scluster/kubernetes/node/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Recreate kube-dns
   command: kubectl --kubeconfig={{ kubeadmin_config }} -n kube-system delete pods -l k8s-app=kube-dns
-  delegate_to: "{{ groups[cluster_master][0] }}"
+  delegate_to: "{{ cluster_master }}"
   run_once: true
   ignore_errors: true
